<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="16dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/tilName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/weight"
            android:inputType="numberDecimal" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="kg"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:layout_marginStart="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/tilWeight"
        app:layout_constraintLeft_toRightOf="@id/tilWeight"
        app:layout_constraintTop_toTopOf="@+id/tilWeight" />

    <me.rishabhkhanna.customtogglebutton.CustomToggleButton
        android:id="@+id/toggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:textOff="@string/walk"
        android:textOn="@string/run"
        app:layout_constraintStart_toStartOf="@+id/tilWeight"
        app:layout_constraintTop_toBottomOf="@+id/tilWeight" />

    <Button
        android:id="@+id/btnApplyChanges"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="25dp"
        android:text="@string/Apply_Changes"
        app:layout_constraintStart_toEndOf="@+id/toggleButton"
        app:layout_constraintTop_toBottomOf="@+id/tilWeight" />

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="20dp"
        android:background="@color/border_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnApplyChanges" />

    <ImageView
        android:id="@+id/redCircle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:src="@drawable/red_circle"
        app:layout_constraintStart_toStartOf="@+id/toggleButton"
        app:layout_constraintTop_toBottomOf="@+id/view1" />
    <ImageView
        android:id="@+id/blueCircle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:src="@drawable/blue_circle"
        app:layout_constraintStart_toEndOf="@+id/redCircle"
        app:layout_constraintTop_toBottomOf="@+id/view1" />

    <ImageView
        android:id="@+id/greenCircle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:src="@drawable/green_circle"
        app:layout_constraintStart_toEndOf="@+id/blueCircle"
        app:layout_constraintTop_toBottomOf="@+id/view1" />

    <ImageView
        android:id="@+id/blackCircle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:src="@drawable/black_circle"
        app:layout_constraintStart_toEndOf="@+id/greenCircle"
        app:layout_constraintTop_toBottomOf="@+id/view1" />

    <ImageView
        android:id="@+id/redCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_check_25"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/redCircle"
        app:layout_constraintStart_toStartOf="@+id/redCircle"
        app:layout_constraintTop_toBottomOf="@+id/redCircle"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/blueCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_check_25"
        app:layout_constraintEnd_toEndOf="@+id/blueCircle"
        app:layout_constraintStart_toStartOf="@+id/blueCircle"
        app:layout_constraintTop_toBottomOf="@+id/blueCircle"
        android:visibility="invisible"
        tools:visibility="visible"/>

    <ImageView
        android:id="@+id/greenCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_check_25"
        app:layout_constraintEnd_toEndOf="@+id/greenCircle"
        app:layout_constraintStart_toStartOf="@+id/greenCircle"
        app:layout_constraintTop_toBottomOf="@+id/greenCircle"
        android:visibility="invisible"
        tools:visibility="visible"/>

    <ImageView
        android:id="@+id/blackCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_check_25"
        app:layout_constraintEnd_toEndOf="@+id/blackCircle"
        app:layout_constraintStart_toStartOf="@+id/blackCircle"
        app:layout_constraintTop_toBottomOf="@+id/blackCircle"
        android:visibility="invisible"
        tools:visibility="visible"/>

    <Button
        android:id="@+id/btnLineChanges"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/Line_Changes"
        app:layout_constraintEnd_toEndOf="@+id/btnApplyChanges"
        app:layout_constraintTop_toBottomOf="@+id/blackCircle" />

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="20dp"
        android:background="@color/border_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/btnLineChanges"
        app:layout_constraintTop_toBottomOf="@+id/btnLineChanges" />
    <!--    <androidx.constraintlayout.widget.Guideline-->
<!--        android:id="@+id/guideline3"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:orientation="horizontal"-->
<!--        app:layout_constraintGuide_percent="0.5" />-->

</androidx.constraintlayout.widget.ConstraintLayout>